# inotify-watcher

./: CMakeLists.txt  LICENSE  README.md  config.json
doc/: inotify.txt  inotify_watcher.spec
etc/: inotify_watcher.service
etc/rsyslog/: inotify_watcher.conf
etc/systemd/: inotify_watcher.service
json/: swe_json.cpp
src/: inotify_path.cpp  inotify_path.h  inotify_service.cpp  inotify_tools.cpp  inotify_tools.h
